--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/redsocial?serverTimezone=America/Lima
+spring.datasource.url=jdbc:mysql://localhost:3306/CL1_Web2_Claudia?serverTimezone=America/Lima
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=1Winipu*
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= none 
